# cmake-intro

./: CMakeLists.txt  FindPKG.cmake  README.md
ex01/: CMakeLists.txt
ex01/src/: main.cpp
ex02/: CMakeLists.txt
ex02/sharedlib/: CMakeLists.txt
ex02/sharedlib/include/: shared.h
ex02/sharedlib/src/: shared.cpp
ex02/sharedlib/test/: shared_test.cpp
ex02/src/: main.cpp
ex02/staticlib/: CMakeLists.txt
ex02/staticlib/include/: static.h
ex02/staticlib/src/: static.cpp
ex02/staticlib/test/: static_test.cpp
examples/: CMakeLists.txt
findpkg/: FindPKG.cmake
sharedlib/: CMakeLists.txt
staticlib/: CMakeLists.txt
